Fixed date layout bug

--- a/src/css/_timeline.scss
+++ b/src/css/_timeline.scss
@@ -16,7 +16,7 @@
             display        : flex;
             justify-content: center;
             align-items    : center;
-            width          : 100px;
+            width          : 115px;
             padding-right  : 15px;
             border-right   : 1px solid darkgray;
             margin-right   : 15px;
